--- a/project_3.ipynb
+++ b/project_3.ipynb
@@ -15,6 +15,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Dataset(s) to be used:** [[(https://www.kaggle.com/datasets/sudalairajkumar/daily-temperature-of-major-cities)]\n",
+    "- **Analysis question:** [\"Is there a significant trend of higher average temperature, at the same time of year, that can be seen in countries around the world?\"]\n",
+    "- **Columns that will (likely) be used:**\n",
+    "  - [city_temperature][Country]\n",
+    "  - [city_temperature][Year] \n",
+    "  - [city_temperature][Month]\n",
+    "  - [city_temperature][AvgTemperature] \n",
+    "- (If you're using multiple datasets) **Columns to be used to merge/join them:**\n",
+    "  - [uncode] [name]\n",
+    "  - [uncode] [alpha-3]\n",
+    "- **Hypothesis**: [There is a significant trend of higher average temperature, at the same time of year, that can be seen in countries around the world]\n",
+    "- **Site URL:** [the `https://computingincontext.readthedocs.io/en/latest/index.html` URL of your live site, from the Publish section]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
